--- a/index.html
+++ b/index.html
@@ -6,128 +6,134 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web Studio</title>
-    <link
+   <link
         href="https://fonts.googleapis.com/css2?family=Oleo+Script&family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
-        rel="stylesheet">   
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+        rel="stylesheet">  
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
     integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
-    crossorigin="anonymous" referrerpolicy="no-referrer" />
+    crossorigin="anonymous" referrerpolicy="no-referrer"/>
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 
 <body>
     <!-- Шапка сайта -->
-    <header>
-      <div class="container">
-          <nav>
-             <a href="./index.html" class="logo">
+    <header class="header">
+     <div class="header-block container">
+        <nav class="navigation">
+            <a href="./index.html" class="logo">
                 <span class="logo-accent">Web</span>Studio
-             </a>
+                
+            </a>
 
-             <ul class="site-nav list">
-                 <li><a href="./index.html" class="nav-link">Студия</a></li>
-                 <li><a href="./portfolio.html" class="nav-link">Портфолио</a></li>
-                 <li><a href="" class="nav-link">Контакты</a></li>
-             </ul>
-          </nav>
-      </div>
-
-      <div class="container-contacts">
+            <ul class="site-nav">
+                <li class="site-list"><a href="./index.html" class="nav-link">Студия</a></li>
+                <li class="site-list"><a href="./portfolio.html" class="nav-link">Портфолио</a></li>
+                <li class="site-list"><a href="" class="nav-link">Контакты</a></li>
+            </ul>
+        </nav>
         <ul class="contacts-list">
-            <li><a href="mailto:info@devstudio.com" class="mail-link">info@devstudio.com</a></li>
-            <li><a href="tel:+380961111111" class="tel-link">+38 096 111 11 11</a></li>
+            <li class="site-list"><a href="mailto:info@devstudio.com" class="mail-link">info@devstudio.com</a></li>
+            <li class="site-list"><a href="tel:+380961111111" class="tel-link">+38 096 111 11 11</a></li>
         </ul>
-      </div> 
+    </div>
 
     </header>
 
     <main>
         <!-- Герой -->
         <section class="hero">
+         <div class="container">
             <h1 class="hero-title">Эффективные решения <br> для вашего бизнеса</h1>
             <button type="button" class="hero-button">Заказать услугу</button>
+         </div>
         </section>
 
 
         <!-- Особенности -->
          <section class="features-section">
-            <h2 class="section-title">Особенности</h2>
-            <ul class="features-list">
-                <li>
+            <h2 class="section-title features visually-hidden">Особенности</h2>
+            <ul class="features-list container">
+                <li class="features-item">
                     <h3 class="features-title">Внимание к деталям</h3>
                     <p class="features-inf">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                 </li>
-                <li>
+                <li class="features-item">
                     <h3 class="features-title">Пунктуальность</h3>
                     <p class="features-inf">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                 </li>
-                <li>
+                <li class="features-item">
                     <h3 class="features-title">Планирование</h3>
                     <p class="features-inf">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                 </li>
-                <li>
+                <li class="features-item">
                     <h3 class="features-title">Современные технологии</h3>
                     <p class="features-inf">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                 </li>
             </ul>
          </section>
 
-            <!-- Чем мы занимаемся -->
+         <!-- Чем мы занимаемся -->
             <section class="section">
-                <h2 class="section-title">Чем мы занимаемся</h2>
+                <div class="container">
+                <h2 class="section-title offers-title">Чем мы занимаемся</h2>
                 <ul class="section-examples">
-                    <li><img src="./images/box1.jpg" alt="рабочий процесс" width="370" height="294"></li>
-                    <li><img src="./images/box2.jpg" alt="дизайн начинки телефона" width="370" height="294"></li>
-                    <li><img src="./images/box3.jpg" alt="выбор цвета в планшете" width="370" height="294"></li>
+                    <li class="offer-list"><img src="./images/box1.jpg" alt="рабочий процесс" width="370" height="294"></li>
+                    <li class="offer-list"><img src="./images/box2.jpg" alt="дизайн начинки телефона" width="370" height="294"></li>
+                    <li class="offer-list"><img src="./images/box3.jpg" alt="выбор цвета в планшете" width="370" height="294"></li>
                 </ul>
+                </div>
             </section>
 
-            <!-- Наша команда -->
-            <section class="team-section">
-                <h2 class="section-title">Наша команда</h2>
+        <!-- Наша команда -->
+            <section class="team-section section">
+                <div class="container">
+                <h2 class="section-title our-team-title">Наша команда</h2>
                 <ul class="team-list">
-                    <li>
+                    <li class="our-team-list">
                         <img src="./images/сard1.jpg" alt="мужчина в очках и бордовой рубашке улыбается" width="270"
                             height="260">
                         <h3 class="team-title">Игорь Демьяненко</h3>
                         <p class="team-positions">Product Designer</p>
                     </li>
 
-                    <li>
+                    <li class="our-team-list">
                         <img src="./images/card2.jpg" alt="женщина в очках и черном пиджаке улыбается" width="270"
                             height="260">
                         <h3 class="team-title">Ольга Репина</h3>
                         <p class="team-positions">Frontend Developer</p>
                     </li>
 
-                    <li>
+                    <li class="our-team-list">
                         <img src="./images/card3.jpg" alt="мужчина в голубой рубашке улыбается" width="270"
                             height="260">
                         <h3 class="team-title">Николай Тарасов</h3>
                         <p class="team-positions">Marketing</p>
                     </li>
 
-                    <li>
+                    <li class="our-team-list">
                         <img src="./images/card4.jpg" alt="мужчина в черной футболке и очках" width="270" height="260">
                         <h3 class="team-title">Михаил Ермаков</h3>
                         <p class="team-positions">UI Designer</p>
                     </li>
                 </ul>
+                </div>
             </section>
     </main>
 
     <!-- Подвал -->
     <footer class="footer">
+<div class="container">
         <a href="/index.html" class="dark-section">
             <span class="dark-logo">Web</span>Studio
         </a>
         <address class="address-section">
             <ul class="address-list">
-                <li><a href="https://goo.gl/maps/f292yfj7Pmm9GZ3NA" class="address-map">г. Киев, пр-т Леси Украинки, 26</a></li>
-                <li><a href="mailto:info@devstudio.com" class="address-mail">info@devstudio.com</a></li>
-                <li><a href="tel:+380961111111" class="address-tel">+38 096 111 11 11</a></li>
+                <li class="address-item"><a href="https://goo.gl/maps/f292yfj7Pmm9GZ3NA" class="address-map">г. Киев, пр-т Леси Украинки, 26</a></li>
+                <li class="address-item"><a href="mailto:info@devstudio.com" class="address-mail">info@devstudio.com</a></li>
+                <li class="address-item"><a href="tel:+380961111111" class="address-tel">+38 096 111 11 11</a></li>
             </ul>
         </address>
+        </div>
     </footer>
 </body>
 
