--- a/portfolio.html
+++ b/portfolio.html
@@ -121,7 +121,7 @@
 
     <footer class="footer">
      <div class="container">
-            <a href="/index.html" class="dark-section">
+            <a href="./index.html" class="dark-section">
                 <span class="dark-logo">Web</span>Studio
             </a>
             <address class="address-section">
