--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
     <!-- Подвал -->
     <footer class="footer">
 <div class="container">
-        <a href="/index.html" class="dark-section">
+        <a href="./index.html" class="dark-section">
             <span class="dark-logo">Web</span>Studio
         </a>
         <address class="address-section">
