--- a/portfolio.html
+++ b/portfolio.html
@@ -38,7 +38,8 @@
 
  <main>
      <section class="section">
-         <h1 class="portfolio-main-title">Портфолио</h1>
+         <div class="container">
+         <h1 class="visually-hidden">Портфолио</h1>
          <!-- Фильтр -->
          <ul class="portfolio-button-list">
              <li><button type="button" class="portfolio-button">Все</button></li>
@@ -49,69 +50,87 @@
             </ul>
             
             <!-- Проекты -->
-    <div class="container">
          <ul class="portfolio-examples">
              <li class="portfolio-items">
                  <a href="" class="portfolio-link">
                     <img src="images/project1.jpg" alt="ноутбук с открытым сайтом" width="370" height="294">
-                    <h2 class="portfolio-title">Технокряк</h2>
-                    <p class="portfolio-text">Веб-сайт</p>
+                    <div class="portfolio-wrapper">
+                      <h2 class="portfolio-title">Технокряк</h2>
+                      <p class="portfolio-text">Веб-сайт</p>
+                    </div>
                  </a>
              </li>
+
              <li class="portfolio-items">
                  <a href="" class="portfolio-link">
                    <img src="./images/project2.jpg" alt="двое мужчин играют в волейбол" width="370" height="294">
-                   <h2 class="portfolio-title">Постер New Orlean vs Golden Star</h2>
-                   <p class="portfolio-text">Дизайн</p>
+                   <div class="portfolio-wrapper">
+                     <h2 class="portfolio-title">Постер New Orlean vs Golden Star</h2>
+                     <p class="portfolio-text">Дизайн</p>
+                   </div>
                 </a>
              </li>
              <li class="portfolio-items">
                  <a href="" class="portfolio-link">
                     <img src="images/project3.jpg" alt="логотип ресторана морской еды" width="370" height="294">
-                    <h2 class="portfolio-title">Ресторан Seafood</h2>
-                    <p class="portfolio-text">Приложение</p>
+                    <div class="portfolio-wrapper">
+                      <h2 class="portfolio-title">Ресторан Seafood</h2>
+                      <p class="portfolio-text">Приложение</p>
+                    </div>
                 </a>
              </li>
              <li class="portfolio-items">
                  <a href="" class="portfolio-link">
                    <img src="images/project4.jpg" alt="чёрные наушники" width="370" height="294">
-                   <h2 class="portfolio-title">Проект Prime</h2>
-                   <p class="portfolio-text">Маркетинг</p>
+                  <div class="portfolio-wrapper">
+                     <h2 class="portfolio-title">Проект Prime</h2>
+                     <p class="portfolio-text">Маркетинг</p>
+                 </div>
                 </a>
              </li>
              <li class="portfolio-items">
                  <a href="" class="portfolio-link">
                    <img src="images/project5.jpg" alt="две коробочки разного цвета" width="370" height="294">
-                   <h2 class="portfolio-title">Проект Boxes</h2>
-                   <p class="portfolio-text">Приложение</p>
+                   <div class="portfolio-wrapper">
+                     <h2 class="portfolio-title">Проект Boxes</h2>
+                     <p class="portfolio-text">Приложение</p>
+                  </div>
                 </a>
              </li>
              <li class="portfolio-items">
                  <a href="" class="portfolio-link">
                    <img src="images/project6.jpg" alt="монитор компьютера" width="370" height="294">
-                   <h2 class="portfolio-title">Inspiration has no Borders</h2>
-                   <p class="portfolio-text">Веб-сайт</p>
+                   <div class="portfolio-wrapper">
+                     <h2 class="portfolio-title">Inspiration has no Borders</h2>
+                     <p class="portfolio-text">Веб-сайт</p>
+                   </div>
                 </a>
              </li>
              <li class="portfolio-items">
                  <a href="" class="portfolio-link">
                    <img src="images/project7.jpg" alt="журнал с картинками и текстом" width="370" height="294">
-                   <h2 class="portfolio-title">Издание Limited Edition</h2>
-                   <p class="portfolio-text">Дизайн</p>
+                   <div class="portfolio-wrapper">
+                     <h2 class="portfolio-title">Издание Limited Edition</h2>
+                     <p class="portfolio-text">Дизайн</p>
+                   </div>
                 </a>
              </li>
              <li class="portfolio-items">
                  <a href="" class="portfolio-link">
                    <img src="images/project8.jpg" alt="бирка с лейблом" width="370" height="294">
-                   <h2 class="portfolio-title">Проект LAB</h2>
-                   <p class="portfolio-text">Маркетинг</p>
+                   <div class="portfolio-wrapper">
+                     <h2 class="portfolio-title">Проект LAB</h2>
+                     <p class="portfolio-text">Маркетинг</p>
+                   </div>
                 </a>
              </li>
              <li class="portfolio-items">
                  <a href="" class="portfolio-link">
                    <img src="images/project9.jpg" alt="руки на клавиатуре ноутбука печатают" width="370" height="294">
-                   <h2 class="portfolio-title">Growing Business</h2>
-                   <p class="portfolio-text">Приложение</p>
+                   <div class="portfolio-wrapper">
+                     <h2 class="portfolio-title">Growing Business</h2>
+                     <p class="portfolio-text">Приложение</p>
+                 </div>
                 </a>
              </li>
          </ul>
