--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
 
         <!-- Особенности -->
          <section class="features-section">
+            <div class="container">
             <h2 class="section-title features visually-hidden">Особенности</h2>
             <ul class="features-list container">
                 <li class="features-item">
@@ -70,6 +71,7 @@
                     <p class="features-inf">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                 </li>
             </ul>
+            </div>
          </section>
 
          <!-- Чем мы занимаемся -->
@@ -92,28 +94,36 @@
                     <li class="our-team-list">
                         <img src="./images/сard1.jpg" alt="мужчина в очках и бордовой рубашке улыбается" width="270"
                             height="260">
+                     <div class="team-block">
                         <h3 class="team-title">Игорь Демьяненко</h3>
                         <p class="team-positions">Product Designer</p>
+                    </div>
                     </li>
 
                     <li class="our-team-list">
                         <img src="./images/card2.jpg" alt="женщина в очках и черном пиджаке улыбается" width="270"
                             height="260">
+                      <div class="team-block">
                         <h3 class="team-title">Ольга Репина</h3>
                         <p class="team-positions">Frontend Developer</p>
+                      </div>
                     </li>
 
                     <li class="our-team-list">
                         <img src="./images/card3.jpg" alt="мужчина в голубой рубашке улыбается" width="270"
                             height="260">
+                      <div class="team-block">
                         <h3 class="team-title">Николай Тарасов</h3>
                         <p class="team-positions">Marketing</p>
+                      </div>
                     </li>
 
                     <li class="our-team-list">
                         <img src="./images/card4.jpg" alt="мужчина в черной футболке и очках" width="270" height="260">
+                       <div class="team-block">
                         <h3 class="team-title">Михаил Ермаков</h3>
                         <p class="team-positions">UI Designer</p>
+                       </div>
                     </li>
                 </ul>
                 </div>
